webserver-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: default
spec:
  rules:
  - host: blue.example.com
    http:
      paths:
      - backend:
          serviceName: web-service
          servicePort: 80
  - host: green.example.com
    http:
      paths:
      - backend:
          serviceName: rsvp
          servicePort: 80
